<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo2"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D6795B">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TV_detailsname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="食物名稱" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IV_detailsimage"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/detailimage"
                android:gravity="fill"
                android:src="@drawable/breakfast1" />

            <TextView
                android:id="@+id/need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/need_food"
                android:textColor="#4F1616"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_food_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="食材"
                android:textColor="#36431B"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/sauce"
                android:textColor="#4F1616"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="調味料"
                android:textColor="#36431B"
                android:textSize="22sp" />


            <Button
                android:id="@+id/BTN_link"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/dsteps"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:text="@string/company"
                android:textColor="#D3B6B1B1"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>